Tabla de contenidos

--- a/Fundamentos del lenguaje.ipynb
+++ b/Fundamentos del lenguaje.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {
+    "toc": true
+   },
+   "source": [
+    "<h1>Contenido<span class=\"tocSkip\"></span></h1>\n",
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Fundamentos-del-lenguaje\" data-toc-modified-id=\"Fundamentos-del-lenguaje-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Fundamentos del lenguaje</a></span><ul class=\"toc-item\"><li><span><a href=\"#Python\" data-toc-modified-id=\"Python-1.1\"><span class=\"toc-item-num\">1.1&nbsp;&nbsp;</span>Python</a></span></li><li><span><a href=\"#Instalando-Python\" data-toc-modified-id=\"Instalando-Python-1.2\"><span class=\"toc-item-num\">1.2&nbsp;&nbsp;</span>Instalando Python</a></span></li><li><span><a href=\"#La-consola-de-Python-como-una-calculadora-básica\" data-toc-modified-id=\"La-consola-de-Python-como-una-calculadora-básica-1.3\"><span class=\"toc-item-num\">1.3&nbsp;&nbsp;</span>La consola de Python como una calculadora básica</a></span></li><li><span><a href=\"#Variables-y-tipos-de-datos\" data-toc-modified-id=\"Variables-y-tipos-de-datos-1.4\"><span class=\"toc-item-num\">1.4&nbsp;&nbsp;</span>Variables y tipos de datos</a></span><ul class=\"toc-item\"><li><span><a href=\"#Variables\" data-toc-modified-id=\"Variables-1.4.1\"><span class=\"toc-item-num\">1.4.1&nbsp;&nbsp;</span>Variables</a></span></li><li><span><a href=\"#Enteros\" data-toc-modified-id=\"Enteros-1.4.2\"><span class=\"toc-item-num\">1.4.2&nbsp;&nbsp;</span>Enteros</a></span></li><li><span><a href=\"#De-coma-flotante\" data-toc-modified-id=\"De-coma-flotante-1.4.3\"><span class=\"toc-item-num\">1.4.3&nbsp;&nbsp;</span>De coma flotante</a></span></li><li><span><a href=\"#Cadenas-de-caracteres\" data-toc-modified-id=\"Cadenas-de-caracteres-1.4.4\"><span class=\"toc-item-num\">1.4.4&nbsp;&nbsp;</span>Cadenas de caracteres</a></span></li><li><span><a href=\"#Booleanos\" data-toc-modified-id=\"Booleanos-1.4.5\"><span class=\"toc-item-num\">1.4.5&nbsp;&nbsp;</span>Booleanos</a></span></li><li><span><a href=\"#Listas\" data-toc-modified-id=\"Listas-1.4.6\"><span class=\"toc-item-num\">1.4.6&nbsp;&nbsp;</span>Listas</a></span></li><li><span><a href=\"#Tuplas\" data-toc-modified-id=\"Tuplas-1.4.7\"><span class=\"toc-item-num\">1.4.7&nbsp;&nbsp;</span>Tuplas</a></span></li><li><span><a href=\"#Diccionarios\" data-toc-modified-id=\"Diccionarios-1.4.8\"><span class=\"toc-item-num\">1.4.8&nbsp;&nbsp;</span>Diccionarios</a></span></li></ul></li><li><span><a href=\"#Operadores-relacionales-y-lógicos\" data-toc-modified-id=\"Operadores-relacionales-y-lógicos-1.5\"><span class=\"toc-item-num\">1.5&nbsp;&nbsp;</span>Operadores relacionales y lógicos</a></span></li><li><span><a href=\"#Control-de-flujo\" data-toc-modified-id=\"Control-de-flujo-1.6\"><span class=\"toc-item-num\">1.6&nbsp;&nbsp;</span>Control de flujo</a></span><ul class=\"toc-item\"><li><span><a href=\"#Condicional-if-elif-else\" data-toc-modified-id=\"Condicional-if-elif-else-1.6.1\"><span class=\"toc-item-num\">1.6.1&nbsp;&nbsp;</span>Condicional <code>if-elif-else</code></a></span></li><li><span><a href=\"#Bucle-for\" data-toc-modified-id=\"Bucle-for-1.6.2\"><span class=\"toc-item-num\">1.6.2&nbsp;&nbsp;</span>Bucle <code>for</code></a></span></li><li><span><a href=\"#Bucle-while\" data-toc-modified-id=\"Bucle-while-1.6.3\"><span class=\"toc-item-num\">1.6.3&nbsp;&nbsp;</span>Bucle <code>while</code></a></span></li></ul></li><li><span><a href=\"#Funciones\" data-toc-modified-id=\"Funciones-1.7\"><span class=\"toc-item-num\">1.7&nbsp;&nbsp;</span>Funciones</a></span><ul class=\"toc-item\"><li><span><a href=\"#Funciones-nativas-de-Python-(built-in)\" data-toc-modified-id=\"Funciones-nativas-de-Python-(built-in)-1.7.1\"><span class=\"toc-item-num\">1.7.1&nbsp;&nbsp;</span>Funciones nativas de Python (<code>built-in</code>)</a></span></li><li><span><a href=\"#Funciones-definidas-por-el-usuario\" data-toc-modified-id=\"Funciones-definidas-por-el-usuario-1.7.2\"><span class=\"toc-item-num\">1.7.2&nbsp;&nbsp;</span>Funciones definidas por el usuario</a></span></li><li><span><a href=\"#Funciones-con-una-cantidad-de-parámetros-indeterminada\" data-toc-modified-id=\"Funciones-con-una-cantidad-de-parámetros-indeterminada-1.7.3\"><span class=\"toc-item-num\">1.7.3&nbsp;&nbsp;</span>Funciones con una cantidad de parámetros indeterminada</a></span></li><li><span><a href=\"#Funciones-y-los-argumentos-con-nombre\" data-toc-modified-id=\"Funciones-y-los-argumentos-con-nombre-1.7.4\"><span class=\"toc-item-num\">1.7.4&nbsp;&nbsp;</span>Funciones y los argumentos con nombre</a></span></li></ul></li><li><span><a href=\"#Ejercicios\" data-toc-modified-id=\"Ejercicios-1.8\"><span class=\"toc-item-num\">1.8&nbsp;&nbsp;</span>Ejercicios</a></span></li></ul></li></ul></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Fundamentos del lenguaje \n",
@@ -1724,6 +1734,22 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.5"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {
+    "height": "462px",
+    "width": "608px"
+   },
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Contenido",
+   "title_sidebar": "Contents",
+   "toc_cell": true,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
