--- a/Matplotlib, visualización gráfica.ipynb
+++ b/Matplotlib, visualización gráfica.ipynb
@@ -4,8 +4,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Matplotlib: visualización gráfica\n",
-    "\n",
+    "# Matplotlib: visualización gráfica"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "toc": true
+   },
+   "source": [
+    "<h1>Contenido<span class=\"tocSkip\"></span></h1>\n",
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Matplotlib:-visualización-gráfica\" data-toc-modified-id=\"Matplotlib:-visualización-gráfica-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Matplotlib: visualización gráfica</a></span><ul class=\"toc-item\"><li><span><a href=\"#De-Matplotlib,-Jupyter-y-las-gráficas-mostradas\" data-toc-modified-id=\"De-Matplotlib,-Jupyter-y-las-gráficas-mostradas-1.1\"><span class=\"toc-item-num\">1.1&nbsp;&nbsp;</span>De Matplotlib, Jupyter y las gráficas mostradas</a></span></li><li><span><a href=\"#Una-primera-aproximación\" data-toc-modified-id=\"Una-primera-aproximación-1.2\"><span class=\"toc-item-num\">1.2&nbsp;&nbsp;</span>Una primera aproximación</a></span></li><li><span><a href=\"#La-función-plot\" data-toc-modified-id=\"La-función-plot-1.3\"><span class=\"toc-item-num\">1.3&nbsp;&nbsp;</span>La función <code>plot</code></a></span><ul class=\"toc-item\"><li><span><a href=\"#Graficando-funciones-matemáticas\" data-toc-modified-id=\"Graficando-funciones-matemáticas-1.3.1\"><span class=\"toc-item-num\">1.3.1&nbsp;&nbsp;</span>Graficando funciones matemáticas</a></span></li><li><span><a href=\"#Modificando-el-color,-estilos-y-grosor-de-línea\" data-toc-modified-id=\"Modificando-el-color,-estilos-y-grosor-de-línea-1.3.2\"><span class=\"toc-item-num\">1.3.2&nbsp;&nbsp;</span>Modificando el color, estilos y grosor de línea</a></span></li><li><span><a href=\"#Título-de-gráfica,-etiquetas-de-ejes-y-nombres-de-curvas\" data-toc-modified-id=\"Título-de-gráfica,-etiquetas-de-ejes-y-nombres-de-curvas-1.3.3\"><span class=\"toc-item-num\">1.3.3&nbsp;&nbsp;</span>Título de gráfica, etiquetas de ejes y nombres de curvas</a></span></li><li><span><a href=\"#Anotaciones\" data-toc-modified-id=\"Anotaciones-1.3.4\"><span class=\"toc-item-num\">1.3.4&nbsp;&nbsp;</span>Anotaciones</a></span></li></ul></li><li><span><a href=\"#Gráficas-en-coordenadas-polares\" data-toc-modified-id=\"Gráficas-en-coordenadas-polares-1.4\"><span class=\"toc-item-num\">1.4&nbsp;&nbsp;</span>Gráficas en coordenadas polares</a></span></li><li><span><a href=\"#Gráficas-de-barras\" data-toc-modified-id=\"Gráficas-de-barras-1.5\"><span class=\"toc-item-num\">1.5&nbsp;&nbsp;</span>Gráficas de barras</a></span></li><li><span><a href=\"#Gráficas-de-curvas-paramétricas-en-el-espacio\" data-toc-modified-id=\"Gráficas-de-curvas-paramétricas-en-el-espacio-1.6\"><span class=\"toc-item-num\">1.6&nbsp;&nbsp;</span>Gráficas de curvas paramétricas en el espacio</a></span></li><li><span><a href=\"#Gráficas-de-superficies\" data-toc-modified-id=\"Gráficas-de-superficies-1.7\"><span class=\"toc-item-num\">1.7&nbsp;&nbsp;</span>Gráficas de superficies</a></span></li></ul></li></ul></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## De Matplotlib, Jupyter y las gráficas mostradas\n",
     "\n",
     "En todo este capítulo se asumirá que las siguientes líneas de código han sido ejecutadas, previamente, para cada porción de código:"
@@ -954,6 +969,19 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.5"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Contenido",
+   "title_sidebar": "Contents",
+   "toc_cell": true,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
