--- a/SymPy, un sistema de álgebra computacional.ipynb
+++ b/SymPy, un sistema de álgebra computacional.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {
+    "toc": true
+   },
+   "source": [
+    "<h1>Contenido<span class=\"tocSkip\"></span></h1>\n",
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Sympy:-un-sistema-de-álgebra-computacional\" data-toc-modified-id=\"Sympy:-un-sistema-de-álgebra-computacional-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Sympy: un sistema de álgebra computacional</a></span><ul class=\"toc-item\"><li><span><a href=\"#Variables-simbólicas\" data-toc-modified-id=\"Variables-simbólicas-1.1\"><span class=\"toc-item-num\">1.1&nbsp;&nbsp;</span>Variables simbólicas</a></span></li><li><span><a href=\"#Manipulación-algebraica\" data-toc-modified-id=\"Manipulación-algebraica-1.2\"><span class=\"toc-item-num\">1.2&nbsp;&nbsp;</span>Manipulación algebraica</a></span></li><li><span><a href=\"#Resolviendo-ecuaciones-e-inecuaciones\" data-toc-modified-id=\"Resolviendo-ecuaciones-e-inecuaciones-1.3\"><span class=\"toc-item-num\">1.3&nbsp;&nbsp;</span>Resolviendo ecuaciones e inecuaciones</a></span><ul class=\"toc-item\"><li><span><a href=\"#Ecuaciones-polinómicas\" data-toc-modified-id=\"Ecuaciones-polinómicas-1.3.1\"><span class=\"toc-item-num\">1.3.1&nbsp;&nbsp;</span>Ecuaciones polinómicas</a></span></li><li><span><a href=\"#Ecuaciones-trigonométricas\" data-toc-modified-id=\"Ecuaciones-trigonométricas-1.3.2\"><span class=\"toc-item-num\">1.3.2&nbsp;&nbsp;</span>Ecuaciones trigonométricas</a></span></li></ul></li><li><span><a href=\"#Cálculo\" data-toc-modified-id=\"Cálculo-1.4\"><span class=\"toc-item-num\">1.4&nbsp;&nbsp;</span>Cálculo</a></span><ul class=\"toc-item\"><li><span><a href=\"#Límites\" data-toc-modified-id=\"Límites-1.4.1\"><span class=\"toc-item-num\">1.4.1&nbsp;&nbsp;</span>Límites</a></span></li><li><span><a href=\"#Derivadas\" data-toc-modified-id=\"Derivadas-1.4.2\"><span class=\"toc-item-num\">1.4.2&nbsp;&nbsp;</span>Derivadas</a></span></li><li><span><a href=\"#Integrales\" data-toc-modified-id=\"Integrales-1.4.3\"><span class=\"toc-item-num\">1.4.3&nbsp;&nbsp;</span>Integrales</a></span></li></ul></li><li><span><a href=\"#Vectores\" data-toc-modified-id=\"Vectores-1.5\"><span class=\"toc-item-num\">1.5&nbsp;&nbsp;</span>Vectores</a></span></li><li><span><a href=\"#Matrices\" data-toc-modified-id=\"Matrices-1.6\"><span class=\"toc-item-num\">1.6&nbsp;&nbsp;</span>Matrices</a></span></li><li><span><a href=\"#Ejercicios\" data-toc-modified-id=\"Ejercicios-1.7\"><span class=\"toc-item-num\">1.7&nbsp;&nbsp;</span>Ejercicios</a></span></li></ul></li></ul></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Sympy: un sistema de álgebra computacional\n",
@@ -1048,7 +1058,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Derivadas\n",
+    "### Derivadas\n",
     "\n",
     "Las derivadas en Python se calculan utilizando la función `diff`, misma que en su forma más simple espera \n",
     "al menos dos argumentos: una expresión algebraica y una variable respecto a la cual derivar. Por ejemplo:\n"
@@ -1121,7 +1131,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Integrales\n",
+    "### Integrales\n",
     "\n",
     "Para calcular integrales vamos a utilizar la función `integrate`, la cual acepta al menos dos \n",
     "argumentos: la función a integrar y la expresión respecto a la cual se integra, por ejemplo:\n"
@@ -1874,19 +1884,22 @@
     "1. Resuelva la siguiente ecuación diferencial:\n",
     "$$ \\frac{dS}{dr} = kS $$\n",
     "\n",
-    "1. Al sacar un pastel del horno, su temperatura es de 300 °F. Después de 3 minutos, 200 °F. \n",
-    "¿En cuanto tiempo se enfriará hasta la temperatura ambiente de 70 °F?\n",
-    "\n",
     "1. Escriba una función que dados como entrada dos vectores, determine sí estos son \n",
     "paralelos.\n",
     "\n",
-    "1. Desarrolle una función llamada \\code{calcula\\_fuerza\\_resultante} que reciba como datos de entrada \n",
-    "un conjunto de vectores fuerza y devuelva el vector de fuerza resultante.\n",
+    "1. Desarrolle una función llamada `calcula_fuerza_resultante` que reciba como datos de entrada un conjunto de vectores fuerza y devuelva el vector de fuerza resultante.\n",
     "\n",
-    "1. Escriba un función llamada \\code{calcula\\_momento\\_resultante} que reciba como datos de entrada un conjunto de \n",
+    "1. Escriba un función llamada `calcula_momento_resultante` que reciba como datos de entrada un conjunto de \n",
     "vectores fuerza y un conjunto de vectores de posición del punto de aplicación de la fuerza con respecto \n",
     "a un cierto punto. Se deberá devolver el momento total producido por las fuerzas con respecto al punto."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1913,6 +1926,19 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.5"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Contenido",
+   "title_sidebar": "Contents",
+   "toc_cell": true,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
