--- a/Matplotlib, visualización gráfica.ipynb
+++ b/Matplotlib, visualización gráfica.ipynb
@@ -746,7 +746,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Las coordenadas polares o sistema de coordenadas polares son un sistema de coordenadas bidimensional en el que cada punto del plano se determina por una distancia y un ángulo [https://es.wikipedia.org/wiki/Coordenadas\\_polares]. Habitualmente \n",
+    "Las coordenadas polares o sistema de coordenadas polares son un sistema de coordenadas bidimensional en el que cada punto del plano se determina por una distancia y un ángulo [*](https://es.wikipedia.org/wiki/Coordenadas_polares) . Habitualmente \n",
     "las funciones en coordenadas polares tienen la forma $ r = f(\\theta)$.\n",
     "\n",
     "En Matplotlib se dispone de la función `polar`, la cual traza una gráfica en coordenadas polares, dados como argumentos \n",
