Bucle for, ejemplos

--- a/Fundamentos del lenguaje.ipynb
+++ b/Fundamentos del lenguaje.ipynb
@@ -1372,6 +1372,56 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El número es impar\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 1111\n",
+    "\n",
+    "if (-1)**(n) > 0:\n",
+    "    print(\"El número es par\")\n",
+    "else:\n",
+    "    print(\"El número es impar\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Regular\n"
+     ]
+    }
+   ],
+   "source": [
+    "nota = 7\n",
+    "\n",
+    "if 9.5 <= nota <= 10:\n",
+    "    print(\"Excelente\")\n",
+    "elif 8.5 <= nota < 9.5:\n",
+    "    print(\"Muy bien\")\n",
+    "elif 7.5 <= nota < 8.5:\n",
+    "    print(\"Bien\")\n",
+    "elif 7.0 <= nota < 7.5:\n",
+    "    print(\"Regular\")\n",
+    "else:\n",
+    "    print(\"No aprobado\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
