--- a/Análisis de elementos finitos.ipynb
+++ b/Análisis de elementos finitos.ipynb
@@ -7,7 +7,7 @@
     "# Análisis de elementos finitos\n",
     "\n",
     "El análisis estructural es uno de los aspectos elementales para aquellos \n",
-    "que nos dedicamos al diseño mecánico o cuestiones similares. En los cursos \n",
+    "que nos dedicamos al diseño mecánico. En los cursos \n",
     "universitarios de resistencia de materiales se enseñan algunos métodos \n",
     "analíticos que permiten obtener soluciones rápidas para componentes mecánicos \n",
     "simples. No obstante, cuando las geometrías se complican se hace necesario \n",
@@ -155,17 +155,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1  UX = 0.0000      FX = -909.0909\n",
-      "2  UX = 0.0000      FX = -4090.9091\n",
-      "3  UX = 0.9091      FX = 0.0000  \n",
-      "4  UX = 1.3636      FX = 5000.0000\n"
+      "1  UX = 0.0000    FX = -909.09\n",
+      "2  UX = 0.0000    FX = -4090.91\n",
+      "3  UX = 0.9091    FX = 0.00\n",
+      "4  UX = 1.3636    FX = 5000.00\n"
      ]
     }
    ],
@@ -208,7 +208,7 @@
     "\n",
     "# Presentando los resultados\n",
     "for nodo in range(4):\n",
-    "    print(\"%g  UX = %-8.4f    FX = %-8.4f\"%(nodo+1, USOL[nodo], NF[nodo]))"
+    "    print(f\"{nodo+1}  UX = {USOL[nodo]:0.4f}    FX = {NF[nodo]:0.2f}\")"
    ]
   },
   {
@@ -226,7 +226,20 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[33m╭──────────────────────────────────────────╮\u001b[0m\n",
+      "\u001b[33m│                                          │\u001b[0m\n",
+      "\u001b[33m│\u001b[0m     Update available \u001b[38;5;241m2.1.0\u001b[0m → \u001b[32m4.3.12\u001b[0m      \u001b[33m│\u001b[0m\n",
+      "\u001b[33m│\u001b[0m   Run \u001b[36mpip3 install -U meshio\u001b[0m to update   \u001b[33m│\u001b[0m\n",
+      "\u001b[33m│                                          │\u001b[0m\n",
+      "\u001b[33m╰──────────────────────────────────────────╯\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "from nusa.core import Node\n",
     "from nusa.element import Spring\n",
@@ -308,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -397,5 +410,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
